<resources>
    <string name="app_name">Joblin</string>
    <string name="title_activity_recr_edit">RecrEditActivity</string>
    <string name="title_activity_cand_edit">CandEditActivity</string>
    <string name="more_details">More Details</string>
    <string name="less_details">Less Details</string>
    <string name="no_new_rec_right_now">There are no new recruiters right now</string>
    <string name="no_new_can_right_now">There are no new candidates right now</string>
    <string name="greeting_text">Welcome To Joblin</string>
    <string name="greeting_text_2"> The app for finding your next job!</string>
    <string name="saved_filtering_method">filtering method</string>

    <!--For Choose Activity-->
    <string name="choose_one">Before we start, please choose which service you wish to use</string>
    <string name="proceed_as_cand">Proceed as a Candidate</string>
    <string name="proceed_as_recr">Proceed as a Recruiter</string>


    <!--For Profile Pref Forms-->
    <string name="first_name">Enter your First Name</string>
    <string name="last_name">Enter your Last Name</string>
    <string name="date_of_birth">Date of Birth: </string>
    <string name="education">Please write your education level </string>
    <string name="skills">Please list your job skills </string>
    <string name="skill">Skill</string>
    <string name="location_cand">Please write your preferred job location: </string>
    <string name="job_scope">Please write your preferred job scope: </string>
    <string name="category">Please choose the field you wish to work in: </string>
    <string name="description">Please write a short description about yourself</string>
    <string name="pref_button">Proceed</string>

    <!--For recruiter-->
    <string name="location_recr">Please write the location your job will be in</string>
    <string name="required_scope">Please write your required job scope:</string>
    <string name="category_recr">Please choose the field of your job: </string>
    <string name="education_recr">Please write the required education level:</string>
    <string name="skills_recr">Please list your required skills for the job </string>
    <string name="description_recr">Please write a short description about your job</string>


    <!--For FMC-->
    <string name="fcm_message">FCM Message</string>
    <string name="data_title">title</string>
    <string name="data_body">body</string>
    <string name="default_notification_channel_id">default</string>
    <string name="title_activity_match_alert">MatchAlertActivity</string>
    <string name="title_activity_match_alert_activty">MatchAlertActivty</string>
    <string name="type_a_message">Type a message</string>

    <string-array name="scope_units">
        <item>Days Per Week</item>
        <item>Position Percentage</item>
    </string-array>

</resources>
