<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:background="@color/colorDivider"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/age"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="3"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="200dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:prompt="@string/age"></Spinner>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:textColor="@color/colorPrimaryText"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/location_cand"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <Spinner
            android:id="@+id/loc_spinner"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:prompt="@string/app_name" />

        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/scope_cand"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
            android:textColor="@color/colorPrimaryText"/>

        <Spinner
            android:id="@+id/scope_spinner"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:prompt="@string/app_name" />

        <TextView
            android:textColor="@color/colorPrimaryText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/category"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:prompt="@string/app_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/education"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/skills"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:gravity="top"
            android:hint="@string/description"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextOrIcons"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/pref_button"/>

    </LinearLayout>
</ScrollView>
